--- a/assets/scss/components/blocks/_group.scss
+++ b/assets/scss/components/blocks/_group.scss
@@ -1,7 +1,7 @@
 .wp-block-group {
 	position: relative; // so negative margins inside will work.
 	z-index: 0; // so negative margins work with overlay.
-	padding: var(--group-block-padding-top, 0) var(--group-block-padding-right, 0) var(--group-block-padding-bottom, 0) var(--group-block-padding-left, 0);
+	padding: var(--group-block-padding-top, 0.05px) var(--group-block-padding-right, 0.05px) var(--group-block-padding-bottom, 0.05px) var(--group-block-padding-left, 0.05px); // 0.05px prevents margin collapsing.
 
 	&.alignfull {
 		--group-block-padding-right: var(--side-spacing);
